[MOB-617] Fixed item layout for smaller devices

--- a/app/src/main/res/layout/payment_method_item.xml
+++ b/app/src/main/res/layout/payment_method_item.xml
@@ -40,9 +40,10 @@
   <TextView
       android:id="@+id/payment_method_description"
       style="@style/TopUpTextStyle.PaymentOptionText"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="17dp"
+      android:gravity="start"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/linearLayout"
       app:layout_constraintHorizontal_bias="0"
