[MOB-666] Added alpha to some settings icon to match the rest of the icons

--- a/app/src/main/res/drawable/ic_backup_black.xml
+++ b/app/src/main/res/drawable/ic_backup_black.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="25dp"
     android:height="16dp"
+    android:alpha="0.9"
     android:viewportWidth="25"
     android:viewportHeight="16">
   <path
