--- a/app/src/main/res/drawable/ic_check_for_update.xml
+++ b/app/src/main/res/drawable/ic_check_for_update.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="19dp"
     android:height="20dp"
+    android:alpha="0.9"
     android:viewportWidth="19"
     android:viewportHeight="20">
   <path
