--- a/app/src/main/res/drawable/ic_issue_report.xml
+++ b/app/src/main/res/drawable/ic_issue_report.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="18dp"
     android:height="21dp"
+    android:alpha="0.9"
     android:viewportWidth="18"
     android:viewportHeight="21">
   <path
