--- a/app/src/main/res/layout/fragment_top_up.xml
+++ b/app/src/main/res/layout/fragment_top_up.xml
@@ -162,6 +162,29 @@
 
       </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+      <LinearLayout
+          android:id="@+id/payments_skeleton"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="10dp"
+          android:layout_marginTop="16dp"
+          android:layout_marginBottom="16dp"
+          android:layout_marginEnd="10dp"
+          android:orientation="vertical"
+          app:layout_constraintBottom_toBottomOf="@id/top_separator_topup"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/bot_separator"
+          >
+        <include layout="@layout/payments_skeleton" />
+        <include
+            layout="@layout/payments_skeleton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            />
+      </LinearLayout>
       <View
           android:id="@+id/bot_separator"
           android:layout_width="match_parent"
@@ -210,6 +233,27 @@
           app:layout_constraintVertical_bias="0"
           />
 
+      <include
+          android:id="@+id/bonus_layout_skeleton"
+          layout="@layout/rounded_rectangle_skeleton"
+          android:layout_width="0dp"
+          android:layout_height="0dp"
+          app:layout_constraintBottom_toBottomOf="@id/bonus_layout"
+          app:layout_constraintEnd_toEndOf="@id/bonus_layout"
+          app:layout_constraintStart_toStartOf="@id/bonus_layout"
+          app:layout_constraintTop_toTopOf="@id/bonus_layout"
+          />
+      <include
+          android:id="@+id/bonus_msg_skeleton"
+          layout="@layout/rounded_rectangle_skeleton"
+          android:layout_width="match_parent"
+          android:layout_height="0dp"
+          android:layout_marginStart="80dp"
+          android:layout_marginEnd="80dp"
+          app:layout_constraintBottom_toBottomOf="@id/bonus_msg"
+          app:layout_constraintTop_toTopOf="@id/bonus_msg"
+          />
+
       <ProgressBar
           android:id="@+id/button_loading"
           android:layout_width="@dimen/button_height"
@@ -217,9 +261,9 @@
           android:indeterminateDrawable="@drawable/gradient_progress"
           android:visibility="gone"
           app:layout_constraintBottom_toBottomOf="@+id/button"
-          app:layout_constraintTop_toTopOf="@+id/button"
-          app:layout_constraintStart_toStartOf="@+id/button"
           app:layout_constraintEnd_toEndOf="@+id/button"
+          app:layout_constraintStart_toStartOf="@+id/button"
+          app:layout_constraintTop_toTopOf="@+id/button"
           />
 
       <Button
