--- a/app/src/main/res/layout/rewards_progress_pioneer.xml
+++ b/app/src/main/res/layout/rewards_progress_pioneer.xml
@@ -59,9 +59,10 @@
   <TextView
       android:id="@+id/max_level_body"
       style="@style/GamificationCurrentLevelTextStyle"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
+      android:layout_marginEnd="16dp"
       android:elevation="2dp"
       android:text="@string/pioneer_gamification_body"
       android:textColor="@color/rewards_level_main_color"
