--- a/app/src/main/res/layout/fragment_gamification_how_it_works_level.xml
+++ b/app/src/main/res/layout/fragment_gamification_how_it_works_level.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,8 +11,9 @@
       android:id="@+id/level"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginEnd="8dp"
       android:textSize="14sp"
-      app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
+      app:layout_constraintEnd_toStartOf="@id/ic_level"
       app:layout_constraintTop_toTopOf="parent"
       tools:text="1"
       />
@@ -22,9 +22,8 @@
       android:id="@+id/ic_level"
       android:layout_width="18dp"
       android:layout_height="18dp"
-      android:layout_marginStart="8dp"
-      android:src="@drawable/ic_appc"
-      app:layout_constraintStart_toEndOf="@id/level"
+      android:src="@drawable/ic_level_locked"
+      app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
       app:layout_constraintTop_toTopOf="parent"
       />
 
@@ -58,8 +57,9 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.16"
+      app:layout_constraintGuide_percent="0.21"
       />
+
 
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/vertical_guideline2"
