--- a/app/src/main/res/layout/fragment_gamification.xml
+++ b/app/src/main/res/layout/fragment_gamification.xml
@@ -12,6 +12,7 @@
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:elevation="2dp"
+      android:paddingBottom="8dp"
       app:layout_constraintTop_toTopOf="parent"
       >
     <View
@@ -20,17 +21,6 @@
         android:layout_height="1dp"
         android:layout_marginTop="15dp"
         android:background="#fbfbfb"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <View
-        android:id="@+id/bottomsheet_notch"
-        android:layout_width="40dp"
-        android:layout_height="4dp"
-        android:background="@drawable/bottomsheet_notch"
-        app:layout_constraintBottom_toBottomOf="@+id/top_separator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -133,8 +123,12 @@
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/gamification_recycler_view"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="0dp"
+      android:layout_marginStart="12dp"
+      android:layout_marginEnd="12dp"
+      android:clipToPadding="false"
       android:overScrollMode="never"
+      android:paddingTop="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
