--- a/app/src/main/res/layout/reached_level_layout.xml
+++ b/app/src/main/res/layout/reached_level_layout.xml
@@ -1,7 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/wallet_card"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="56dp"
+    android:background="@drawable/rectangle_solid_white"
     >
 
+  <ImageView
+      android:id="@+id/level_icon"
+      android:layout_width="45dp"
+      android:layout_height="45dp"
+      android:layout_marginStart="16dp"
+      android:src="@drawable/ic_level_galaxy_dark"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+  <TextView
+      android:id="@+id/level_title"
+      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="2dp"
+      android:layout_marginEnd="8dp"
+      android:ellipsize="end"
+      android:fontFamily="sans-serif-medium"
+      android:lineSpacingExtra="4sp"
+      android:maxLines="1"
+      android:text="AWESOME TITLE"
+      android:textColor="@color/black"
+      android:textSize="12sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@id/level_icon"
+      app:layout_constraintTop_toTopOf="@id/level_icon"
+      />
+  <TextView
+      android:id="@+id/level_description"
+      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="4dp"
+      android:layout_marginEnd="8dp"
+      android:ellipsize="end"
+      android:fontFamily="sans-serif-medium"
+      android:lineSpacingExtra="4sp"
+      android:maxLines="1"
+      android:text="AWESOME DESCRIPTION"
+      android:textColor="@color/grey"
+      android:textSize="12sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@id/level_title"
+      app:layout_constraintTop_toBottomOf="@id/level_title"
+      />
 </androidx.constraintlayout.widget.ConstraintLayout>
