--- a/app/src/main/res/layout/unreached_level_layout.xml
+++ b/app/src/main/res/layout/unreached_level_layout.xml
@@ -1,7 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/wallet_card"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="56dp"
+    android:background="@drawable/rectangle_solid_white"
     >
-
+  <ImageView
+      android:id="@+id/level_locked_icon"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_marginStart="8dp"
+      android:src="@drawable/ic_level_locked"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+  <TextView
+      android:id="@+id/locked_text"
+      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="76dp"
+      android:fontFamily="sans-serif-medium"
+      android:lineSpacingExtra="4sp"
+      android:text="Spend 75000 AppCoins to reach this level"
+      android:textColor="#727272"
+      android:textSize="12sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/locked_bonus"
+      app:layout_constraintStart_toEndOf="@id/level_locked_icon"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+  <TextView
+      android:id="@+id/locked_bonus"
+      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="16dp"
+      android:background="@drawable/oval_grey_background"
+      android:ellipsize="end"
+      android:fontFamily="sans-serif-medium"
+      android:gravity="end"
+      android:lineSpacingExtra="4sp"
+      android:maxLines="1"
+      android:paddingHorizontal="12dp"
+      android:paddingVertical="6dp"
+      android:text="14% Bonus"
+      android:textColor="@color/white"
+      android:textSize="12sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
 </androidx.constraintlayout.widget.ConstraintLayout>
