--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -96,4 +96,12 @@
 
   <color name="edit_text_border">@color/appc_pink</color>
   <color name="edit_text_label">@color/appc_pink</color>
+
+  <!-- Gamification -->
+
+  <color name="yellow">#FFFF00</color>
+  <color name="blue_grey">#6699CC</color>
+  <color name="blue_green">#0d98ba</color>
+  <color name="blue">#0000FF</color>
+  <color name="light_blue">#add8e6</color>
 </resources>
