[MOB-768] Made necessary changes to layout after design. Removed Inovator logic

--- a/app/src/main/res/drawable/generic_progress_bar.xml
+++ b/app/src/main/res/drawable/generic_progress_bar.xml
@@ -4,7 +4,7 @@
   <item android:id="@android:id/background">
     <shape>
       <corners android:radius="8dp" />
-      <solid android:color="@color/grey_alpha_active_54" />
+      <solid android:color="#0BFFFFFF" />
     </shape>
   </item>
 
