--- a/app/src/main/res/layout/current_level_layout.xml
+++ b/app/src/main/res/layout/current_level_layout.xml
@@ -10,15 +10,15 @@
       android:layout_width="wrap_content"
       android:layout_height="32dp"
       android:layout_marginStart="16dp"
-      android:background="@drawable/oval_grey_background"
+      android:background="@drawable/oval_toogle_button"
       android:drawableEnd="@drawable/arrow_rotated"
-      android:drawablePadding="16dp"
+      android:drawablePadding="8dp"
       android:paddingHorizontal="12dp"
       android:paddingVertical="6dp"
-      android:textColor="@color/white"
+      android:textColor="#000f1a"
       android:textOff="See previous achievements"
       android:textOn="Hide previous achievements"
-      android:textSize="12sp"
+      android:textSize="11sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
