--- a/app/src/main/res/drawable/oval_toogle_button.xml
+++ b/app/src/main/res/drawable/oval_toogle_button.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-  <solid android:color="#ededed" />
+  <solid android:color="#f3f3f3" />
   <!-- The radius makes the corners rounded -->
-  <corners android:radius="12dp" />
+  <corners android:radius="14dp" />
 
 </shape>
