--- a/app/src/main/res/layout/current_level_card.xml
+++ b/app/src/main/res/layout/current_level_card.xml
@@ -2,20 +2,23 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
-    app:cardCornerRadius="8dp"
+    android:layout_height="200dp"
+    app:cardCornerRadius="12dp"
     >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:background="@drawable/space_background_card"
       >
     <ImageView
         android:id="@+id/current_level_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="63dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="17dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@color/grey"
+        android:src="@drawable/ic_level_galaxy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -23,12 +26,13 @@
         android:id="@+id/current_level_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-medium"
         android:text="You are on Mars"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/current_level_image"
+        app:layout_constraintTop_toBottomOf="@id/current_level_image"
         />
 
     <TextView
@@ -36,8 +40,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:fontFamily="sans-serif"
+        android:lineSpacingExtra="9sp"
         android:text="Spend this amount to reach next level"
         android:textColor="@color/white"
+        android:textSize="11sp"
         app:layout_constraintStart_toStartOf="@id/current_level_title"
         app:layout_constraintTop_toBottomOf="@id/current_level_title"
         />
@@ -46,14 +53,13 @@
         android:id="@+id/current_level_progress_bar"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="0dp"
-        android:layout_height="6dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="78dp"
         android:max="100"
         android:min="0"
         android:progress="50"
         android:progressDrawable="@drawable/generic_progress_bar"
-        android:scaleY="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/spend_amount_text"
         app:layout_constraintTop_toBottomOf="@id/spend_amount_text"
@@ -63,8 +69,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
+        android:fontFamily="sans-serif"
+        android:lineSpacingExtra="9sp"
         android:text="75%"
         android:textColor="@color/white"
+        android:textSize="11sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/current_level_progress_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/current_level_progress_bar"
@@ -76,19 +86,20 @@
         style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/oval_grey_background"
         android:ellipsize="end"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="sans-serif"
         android:gravity="end"
         android:lineSpacingExtra="4sp"
         android:maxLines="1"
         android:paddingHorizontal="12dp"
-        android:paddingVertical="6dp"
+        android:paddingVertical="5dp"
         android:text="14% Bonus"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -96,10 +107,13 @@
         android:id="@+id/current_level_phrase"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="sans-serif-medium"
+        android:lineSpacingExtra="5sp"
         android:text="All truths are easy to understand once they are discovered, the point is to discover them - Galileo Galilei"
-        android:textColor="@color/blue_grey"
-        android:textSize="12sp"
+        android:textColor="#99FFFFFF"
+        android:textSize="11sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@id/percentage_left"
         app:layout_constraintStart_toStartOf="@id/current_level_progress_bar"
         app:layout_constraintTop_toBottomOf="@id/current_level_progress_bar"
