--- a/app/src/main/res/layout/reached_level_layout.xml
+++ b/app/src/main/res/layout/reached_level_layout.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/wallet_card"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="64dp"
     android:background="@drawable/rectangle_solid_white"
+    android:elevation="2dp"
     >
 
   <ImageView
       android:id="@+id/level_icon"
-      android:layout_width="45dp"
-      android:layout_height="45dp"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
       android:layout_marginStart="16dp"
       android:src="@drawable/ic_level_galaxy_dark"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -23,33 +24,32 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
-      android:layout_marginTop="2dp"
+      android:layout_marginTop="15dp"
       android:layout_marginEnd="8dp"
       android:ellipsize="end"
       android:fontFamily="sans-serif-medium"
-      android:lineSpacingExtra="4sp"
       android:maxLines="1"
       android:text="AWESOME TITLE"
-      android:textColor="@color/black"
-      android:textSize="12sp"
+      android:textColor="#00121f"
+      android:textSize="14sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/level_icon"
-      app:layout_constraintTop_toTopOf="@id/level_icon"
+      app:layout_constraintTop_toTopOf="parent"
       />
   <TextView
       android:id="@+id/level_description"
       style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginTop="4dp"
+      android:layout_marginTop="2dp"
       android:layout_marginEnd="8dp"
       android:ellipsize="end"
-      android:fontFamily="sans-serif-medium"
-      android:lineSpacingExtra="4sp"
+      android:fontFamily="sans-serif"
+      android:lineSpacingExtra="9sp"
       android:maxLines="1"
       android:text="AWESOME DESCRIPTION"
-      android:textColor="@color/grey"
-      android:textSize="12sp"
+      android:textColor="#000f19"
+      android:textSize="11sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="@id/level_title"
       app:layout_constraintTop_toBottomOf="@id/level_title"
