--- a/app/src/main/res/layout/unreached_level_layout.xml
+++ b/app/src/main/res/layout/unreached_level_layout.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:background="@drawable/rectangle_solid_white"
+    android:elevation="2dp"
     >
   <ImageView
       android:id="@+id/level_locked_icon"
       android:layout_width="40dp"
       android:layout_height="40dp"
-      android:layout_marginStart="8dp"
+      android:layout_marginStart="16dp"
       android:src="@drawable/ic_level_locked"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
@@ -21,13 +22,13 @@
       style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
+      android:layout_marginStart="16dp"
       android:layout_marginEnd="48dp"
-      android:fontFamily="sans-serif-medium"
-      android:lineSpacingExtra="4sp"
+      android:fontFamily="sans-serif"
+      android:lineSpacingExtra="5sp"
       android:text="Spend 75000 AppCoins to reach this level"
-      android:textColor="#727272"
-      android:textSize="12sp"
+      android:textColor="#000f1a"
+      android:textSize="11sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@id/locked_bonus"
       app:layout_constraintStart_toEndOf="@id/level_locked_icon"
@@ -46,9 +47,9 @@
       android:lineSpacingExtra="4sp"
       android:maxLines="1"
       android:paddingHorizontal="12dp"
-      android:paddingVertical="6dp"
+      android:paddingVertical="5dp"
       android:text="14% Bonus"
-      android:textColor="@color/white"
+      android:textColor="#808080"
       android:textSize="12sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
